--- a/package.json
+++ b/package.json
@@ -8,21 +8,26 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/core": "^0.8.0",
-    "@chakra-ui/react": "^1.4.2",
+    "@chakra-ui/react": "^2.3.6",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@hookform/resolvers": "^2.9.10",
     "apexcharts": "^3.26.0",
-    "framer-motion": "^4.1.2",
-    "next": "10.1.3",
-    "react": "17.0.2",
+    "framer-motion": "^7.6.2",
+    "next": "13.0.0",
+    "react": "18.2.0",
     "react-apexcharts": "^1.3.7",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0",
+    "react-icons": "^4.2.0",
+    "react-query": "^3.39.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/node": "^18.11.7",
-    "@types/react": "^18.0.23",
+    "@types/react": "^18.0.24",
+    "miragejs": "^0.1.45",
     "typescript": "^4.8.4"
   }
 }
