--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.1.5",
     "@hookform/resolvers": "^2.9.10",
     "apexcharts": "^3.26.0",
+    "axios": "^1.1.3",
     "framer-motion": "^7.6.2",
     "next": "13.0.0",
     "react": "18.2.0",
